--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -1,8 +1,3 @@
-.exp ul{
-    margin-top: 15px;
-    font-size: 1.2rem;
-}
-
 .exp:not(:last-of-type){
     border-right: 1px grey solid;
 }
@@ -23,6 +18,28 @@
     font-weight: 300;
 }
 
-.exp figcaption, .exp ul{
-    min-width: 200px !important;
+.exp figcaption{
+    min-width: 300px !important;
+}
+
+@media (max-width: 768px){
+    body > header{
+        position: initial !important;
+    }
+
+    .content{
+        margin-top: 25px;
+    }
+}
+
+@media (max-width: 1080px){
+    .exp:not(:last-of-type){
+        border-right: 1px transparent solid;
+        border-bottom: 1px grey solid;
+        padding-bottom: 25px;
+    }
+
+    .exp:not(:first-of-type){
+        padding-top: 25px;
+    }
 }
