--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -14,6 +14,7 @@
 
 .social{
     margin: 15px;
+    height: 5vw;
     min-height: 50px;
     max-height: 100px;
     transition: transform .5s ease;
