--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="text-center bg-dark text-light p-3">
+<footer class="text-center bg-dark text-light">
     &copy; 2020 {{ site.name }}
 </footer>
