--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -25,3 +25,9 @@
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
 }
+
+@media screen and (max-width: 768px){
+    body > header{
+        position: initial !important;
+    }
+}
