--- a/_sass/project.scss
+++ b/_sass/project.scss
@@ -10,7 +10,8 @@
 .project img{
     object-fit: contain;
     max-height: 250px;
-    max-width: 400px;
+    max-width: 100%;
+    width: 400px;
     border-radius: 15px;
 }
 
