--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="container-fluid fixed-top bg-dark py-5 py-md-0">
     <div class="row align-items-center">
         <div class="col-md-auto text-center">
-            <img src="{{ site.photo }}" alt="" id="photo" class="rounded-circle">
+            <a href="/"><img src="{{ site.photo }}" alt="" id="photo" class="rounded-circle"></a>
         </div>
         <div class="col-md container text-center">
             <div class="row align-items-center text-md-left">
