add support for blog posts

--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,6 +1,6 @@
 <a href="{{ project.url }}" target="_blank" class="project">
     <figure>
-        <h5>{{ project.title }}</h5>
+        <h5 class="text-center">{{ project.title }}</h5>
         <img src="{{ project.image_path }}" alt="">
         <br><br>
         <figcaption>
