--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -1,8 +1,6 @@
 ---
 ---
 @import "header";
-@import "home";
+@import "header-mini";
 @import "post";
-@import "experience";
-@import "project";
 @import "footer";
