dynamic copyright year

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center bg-dark text-light">
-    &copy; 2020 {{ site.name }}
+    &copy; {{ 'now' | date: "%Y" }} {{ site.name }}
 </footer>
