--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,11 +1,11 @@
 <div class="post">
-    <a href="{{ post.url }}"><img src="{{ post.image }}"></a>
+    <a href="{{ post.url }}" target="_blank"><img src="{{ post.image }}"></a>
     <div class="desc">
         <p>
             <span class="text-secondary">{{ post.date | date: "%a, %b %d, %y" }}</span><br>
             By @{{ post.authors | join: ", @" }}
         </p>
-        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <h3><a href="{{ post.url }}" target="_blank">{{ post.title }}</a></h3>
         <p>{{ post.description }}</p>
     </div>
 </div>
