--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,7 +66,7 @@ layout: default
         {% endif %}
         {% if site.data.external %}
             {% for external in site.data.external %}
-                <div class="external">
+                <div class="external" id="{{ external[0] }}">
                     <h1>{{ external[0] | capitalize }}</h1>
                     <div class="list">
                         {% for ext in external[1].list limit:external[1].limit %}
