--- a/_sass/external.scss
+++ b/_sass/external.scss
@@ -29,6 +29,10 @@
     padding: 25px;
 }
 
+.external .item .image{
+    align-self: center;
+}
+
 .external .item img{
     width: 200px;
     margin-right: 25px;
