--- a/_includes/external-item.html
+++ b/_includes/external-item.html
@@ -1,9 +1,9 @@
 <div class="item" year="{{ ext.year }}">
     {% if ext.image %}
         {% if ext.url == nil %}
-            <img src="{{ ext.image }}">
+            <span class="image"><img src="{{ ext.image }}"></span>
         {% else %}
-            <a href="{{ ext.url }}" target="_blank"><img src="{{ ext.image }}"></a>
+            <a href="{{ ext.url }}" target="_blank" class="image"><img src="{{ ext.image }}"></a>
         {% endif %}
     {% endif %}
     <div {% if ext.image == nil %}class="no-img"{% endif %}>
