--- a/_sass/external-home.scss
+++ b/_sass/external-home.scss
@@ -42,7 +42,7 @@
 }
 
 .external .item div{
-    margin: 10px 0;
+    margin-top: 10px;
     max-width: min(calc(100vw - 40px), 400px);
 }
 
@@ -54,9 +54,13 @@
     text-decoration: none;
 }
 
+.external .item p:last-child{
+    margin-bottom: 0;
+}
+
 .external .more{
     margin-left: auto;
-    margin-right: 1vw;
+    margin-right: 2vw;
     padding: 10px;
     display: inline-flex;
     border: 1px black solid;
