blog image fixed 16:10 ratio

--- a/_sass/external-home.scss
+++ b/_sass/external-home.scss
@@ -59,8 +59,8 @@
 }
 
 .external .more{
+    margin-top: 50px;
     margin-left: auto;
-    margin-right: 2vw;
     padding: 10px;
     display: inline-flex;
     border: 1px black solid;
