--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -25,7 +25,7 @@
 }
 
 .projects{
-    grid-template-columns: repeat(auto-fit, min(100vw, 600px));
+    grid-template-columns: repeat(auto-fit, min(calc(100vw - 100px), 600px));
 }
 
 .row{
@@ -39,7 +39,7 @@
     }
 
     #home-content > div{
-        padding-right: 0px;
-        padding-left: 0px;
+        padding-right: 50px;
+        padding-left: 50px;
     }
 }
