--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,7 +56,7 @@ layout: default
         {% endif %}
         {% if site.data.projects %}
             <div>
-                <h1 class="text-center">Projects</h1>
+                <h1 class="text-center mb-4">Projects</h1>
                 <div class="projects">
                     {% for project in site.data.projects %}
                         {% include project.html %}
